JumpScript/tests/baselines/reference/parserParameterList9.errors.txt
tests/cases/conformance/parser/ecmascript5/ParameterLists/parserParameterList9.jump(2,14): error TS1047: A rest parameter cannot be optional.


==== tests/cases/conformance/parser/ecmascript5/ParameterLists/parserParameterList9.jump (1 errors) ====
    class C {
       foo(...bar?) { }
                 ~
!!! error TS1047: A rest parameter cannot be optional.
    }